# coding-assistant-assistant

./: .gitignore  README.md  docs_notes.txt  pyproject.toml
src/assistant_analyzer/: assistant.py
src/assistant_analyzer/dev/: assistant_backup.py  assistant_openai_agent.py  assistant_pydanticai.py  ast_example.py  embedding_example.py  simple_query.py
src/loaders/: load_codeium.py  simple_extract_codeium_blog.py
src/loaders/codeium/: load_codeium_blog_posts.py  load_codeium_changelog.py  load_codeium_docs.py
src/loaders/cursor/: load_cursor_blog_posts.py  load_cursor_changelog.py  load_cursor_docs.py
src/loaders/cursor/dev/: load_cursor_blog_posts_backup.py  load_cursor_blog_posts_debug.py  soup1.html  soup2.html
src/loaders/models/: models.py
src/refresh_pipeline/: refresh_changelog.py
src/utils/: network.py
