[project]
name = "coding-assistant-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "openai>=1.66.3",
    "playwright>=1.50.0",
    "prefect>=3.2.13",
    "pydantic-ai>=0.0.40",
    "pydantic>=2.10.6",
    "logfire>=3.9.0",
]
